k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-app-service
  namespace: fintech
spec:
  selector:
    app: fintech-app
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
